# godot-bevy-testing

./: .gitignore
godot/: editor.entitlements  fpslabel.gd  icon.svg.import  main.gd  main.tscn  minmaxcontrols.gd  pixel.tscn  pixelcontroller.gd  project.gdextension  project.godot  snowflake.gd  snowflake.tscn  snowflake_lines.gd  snowmain.gd
rust/: Cargo.toml
rust/src/: lib.rs
